fix: backface visibility

--- a/scss_modules/_vertical.scss
+++ b/scss_modules/_vertical.scss
@@ -5,6 +5,8 @@
     position: relative;
     stroke: var(--color);
     transition: stroke .3s ease-in;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     &:hover {
         stroke: var(--x);
     }    
